# simple-mooc

./: .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20211021_2225.py  0003_alter_user_username.py
accounts/templates/: dashboard.html  edit-passwd.html  edit-profile.html  login.html  register.html
core/: mail.py  urls.py  views.py
core/static/css/: styles.css
core/templates/: base.html  contact.html  home.html
courses/: admin.py  forms.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_auto_20210402_0020.py  0003_auto_20210406_2216.py
courses/templates/courses/: contact_email.html  details.html  index.html
simplemooc/: settings.py  urls.py
simplemooc/accounts/: urls.py  views.py
simplemooc/accounts/templates/: login.html  register.html
simplemooc/core/: views.py
simplemooc/core/static/css/: styles.css
simplemooc/core/templates/: base.html
simplemooc/courses/: views.py
simplemooc/courses/migrations/: 0001_initial.py  0003_auto_20210406_2216.py
simplemooc/simplemooc/: settings.py  urls.py
simplemooc/simplemooc/core/: views.py
simplemooc/simplemooc/core/templates/: base.html  contact.html
simplemooc/simplemooc/courses/: forms.py  models.py  urls.py  views.py
simplemooc/simplemooc/courses/templates/courses/: details.html  index.html
