[tool.poetry]
name = "simple-mooc"
version = "4.47"
description = ""
authors = ["NatalNW <natanaelweslley1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
blue = "^0.9.0"
pip-audit = "^2.2.1"
prospector = "^1.7.7"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
